# readmission-risk-scorer

./: .env.example  .gitignore  CLAUDE.md  README.md  cautions.md  pyproject.toml  requirements.txt  uv.toml
data/: mock-predictions.json  review-queue.jsonl  test.csv  train.csv
docs/: architecture.mermaid  interview-demo-guide.md
infra/azure-function/: host.json  requirements.txt
infra/azure-function/predict/: __init__.py  function.json
infra/azure-ml/: conda.yml  score.py
infra/terraform/: function_app.tf  keyvault.tf  main.tf  ml_workspace.tf  monitor.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
models/: feature_names.json  scaler_v1.joblib  xgb_readmission_v1.joblib
reports/: eval-report.json  training-cost.json
scripts/: deploy-model.py  evaluate.py  generate-dataset.py  package-model.py  test-aml-endpoint.py  train.py
src/api/: main.py
src/api/routes/: eval.py  health.py  predict.py  review.py
src/models/: discharge_record.py  risk_assessment.py
src/utils/: audit.py  cost.py  imputation.py  inference.py  ood_check.py  risk_tier.py  shap_explainer.py
tests/: conftest.py  test_cost.py  test_imputation.py  test_ood_check.py  test_predict.py  test_risk_tier.py
