[project]
name = "readmission-risk-scorer"
version = "1.0.0"
description = "30-day hospital readmission risk scorer: XGBoost + SHAP, FastAPI inference"
requires-python = ">=3.11,<3.14"
dependencies = [
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "shap>=0.46,<0.50",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
